// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comment should translate comment, not short 1`] = `
Object {
  "_state": undefined,
  "attrs": Object {
    "className": "hs-item-comment",
  },
  "children": Array [
    Object {
      "_state": undefined,
      "attrs": Object {
        "className": "hs-item-comment-desc",
      },
      "children": Array [
        Object {
          "_state": undefined,
          "attrs": undefined,
          "children": "<p>short example comment.</p>
<pre><code>    # complete comment
    with sub paragraphs and code:
    &lt;pre&gt;<code>line 1 {
&lt;span class=\\"hs-code-indent\\"&gt;&lt;/span&gt;indented line
}</code>&lt;/pre&gt;
</code></pre>",
          "dom": undefined,
          "domSize": undefined,
          "events": undefined,
          "instance": undefined,
          "key": undefined,
          "skip": false,
          "state": undefined,
          "tag": "<",
          "text": undefined,
        },
      ],
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "skip": false,
      "state": undefined,
      "tag": "div",
      "text": undefined,
    },
    Object {
      "_state": undefined,
      "attrs": undefined,
      "children": Array [
        Object {
          "_state": undefined,
          "attrs": Object {
            "className": "hs-item-comment-special",
          },
          "children": Array [
            Object {
              "_state": undefined,
              "attrs": Object {
                "className": "hs-item-comment-tag",
              },
              "children": undefined,
              "dom": undefined,
              "domSize": undefined,
              "events": undefined,
              "instance": undefined,
              "key": undefined,
              "skip": false,
              "state": undefined,
              "tag": "span",
              "text": "description2",
            },
            Object {
              "_state": undefined,
              "attrs": Object {
                "className": "hs-item-comment-text",
              },
              "children": undefined,
              "dom": undefined,
              "domSize": undefined,
              "events": undefined,
              "instance": undefined,
              "key": undefined,
              "skip": false,
              "state": undefined,
              "tag": "span",
              "text": "other tag",
            },
          ],
          "dom": undefined,
          "domSize": undefined,
          "events": undefined,
          "instance": undefined,
          "key": undefined,
          "skip": false,
          "state": undefined,
          "tag": "div",
          "text": undefined,
        },
        Object {
          "_state": undefined,
          "attrs": Object {
            "className": "hs-item-comment-special",
          },
          "children": Array [
            Object {
              "_state": undefined,
              "attrs": Object {
                "className": "hs-item-comment-tag",
              },
              "children": undefined,
              "dom": undefined,
              "domSize": undefined,
              "events": undefined,
              "instance": undefined,
              "key": undefined,
              "skip": false,
              "state": undefined,
              "tag": "span",
              "text": "other",
            },
            Object {
              "_state": undefined,
              "attrs": Object {
                "className": "hs-item-comment-text",
              },
              "children": Array [],
              "dom": undefined,
              "domSize": undefined,
              "events": undefined,
              "instance": undefined,
              "key": undefined,
              "skip": false,
              "state": undefined,
              "tag": "span",
              "text": undefined,
            },
          ],
          "dom": undefined,
          "domSize": undefined,
          "events": undefined,
          "instance": undefined,
          "key": undefined,
          "skip": false,
          "state": undefined,
          "tag": "div",
          "text": undefined,
        },
      ],
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "skip": false,
      "state": undefined,
      "tag": "div",
      "text": undefined,
    },
    Object {
      "_state": undefined,
      "attrs": Object {
        "className": "hs-item-comment-params",
      },
      "children": Array [
        Object {
          "_state": undefined,
          "attrs": Object {
            "className": "hs-item-comment-param",
          },
          "children": Array [
            Object {
              "_state": undefined,
              "attrs": Object {
                "className": "hs-item-comment-tag",
              },
              "children": undefined,
              "dom": undefined,
              "domSize": undefined,
              "events": undefined,
              "instance": undefined,
              "key": undefined,
              "skip": false,
              "state": undefined,
              "tag": "span",
              "text": "undefined:",
            },
            Object {
              "_state": undefined,
              "attrs": Object {
                "className": "hs-item-comment-text",
              },
              "children": undefined,
              "dom": undefined,
              "domSize": undefined,
              "events": undefined,
              "instance": undefined,
              "key": undefined,
              "skip": false,
              "state": undefined,
              "tag": "span",
              "text": "",
            },
          ],
          "dom": undefined,
          "domSize": undefined,
          "events": undefined,
          "instance": undefined,
          "key": undefined,
          "skip": false,
          "state": undefined,
          "tag": "div",
          "text": undefined,
        },
      ],
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "skip": false,
      "state": undefined,
      "tag": "div",
      "text": undefined,
    },
    Object {
      "_state": undefined,
      "attrs": Object {
        "className": "hs-item-comment-return",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "skip": false,
      "state": undefined,
      "tag": "div",
      "text": "",
    },
    Object {
      "_state": undefined,
      "attrs": undefined,
      "children": Array [
        Object {
          "_state": undefined,
          "attrs": undefined,
          "children": "",
          "dom": undefined,
          "domSize": undefined,
          "events": undefined,
          "instance": undefined,
          "key": undefined,
          "skip": false,
          "state": undefined,
          "tag": "#",
          "text": undefined,
        },
        Object {
          "_state": undefined,
          "attrs": undefined,
          "children": "",
          "dom": undefined,
          "domSize": undefined,
          "events": undefined,
          "instance": undefined,
          "key": undefined,
          "skip": false,
          "state": undefined,
          "tag": "#",
          "text": undefined,
        },
        Object {
          "_state": undefined,
          "attrs": undefined,
          "children": "",
          "dom": undefined,
          "domSize": undefined,
          "events": undefined,
          "instance": undefined,
          "key": undefined,
          "skip": false,
          "state": undefined,
          "tag": "#",
          "text": undefined,
        },
      ],
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "skip": false,
      "state": undefined,
      "tag": "div",
      "text": undefined,
    },
  ],
  "dom": undefined,
  "domSize": undefined,
  "events": undefined,
  "instance": undefined,
  "key": undefined,
  "skip": false,
  "state": undefined,
  "tag": "div",
  "text": undefined,
}
`;

exports[`comment should translate comment, short 1`] = `
Object {
  "_state": undefined,
  "attrs": Object {
    "className": "hs-item-comment",
  },
  "children": Array [
    Object {
      "_state": undefined,
      "attrs": Object {
        "className": "hs-item-comment-desc",
      },
      "children": Array [
        Object {
          "_state": undefined,
          "attrs": undefined,
          "children": "<p>short example comment.",
          "dom": undefined,
          "domSize": undefined,
          "events": undefined,
          "instance": undefined,
          "key": undefined,
          "skip": false,
          "state": undefined,
          "tag": "<",
          "text": undefined,
        },
      ],
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "skip": false,
      "state": undefined,
      "tag": "div",
      "text": undefined,
    },
    Object {
      "_state": undefined,
      "attrs": Object {
        "className": "hs-item-comment-return",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "skip": false,
      "state": undefined,
      "tag": "div",
      "text": "",
    },
    Object {
      "_state": undefined,
      "attrs": undefined,
      "children": Array [
        Object {
          "_state": undefined,
          "attrs": undefined,
          "children": "",
          "dom": undefined,
          "domSize": undefined,
          "events": undefined,
          "instance": undefined,
          "key": undefined,
          "skip": false,
          "state": undefined,
          "tag": "#",
          "text": undefined,
        },
        Object {
          "_state": undefined,
          "attrs": undefined,
          "children": "",
          "dom": undefined,
          "domSize": undefined,
          "events": undefined,
          "instance": undefined,
          "key": undefined,
          "skip": false,
          "state": undefined,
          "tag": "#",
          "text": undefined,
        },
        Object {
          "_state": undefined,
          "attrs": undefined,
          "children": "",
          "dom": undefined,
          "domSize": undefined,
          "events": undefined,
          "instance": undefined,
          "key": undefined,
          "skip": false,
          "state": undefined,
          "tag": "#",
          "text": undefined,
        },
      ],
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "skip": false,
      "state": undefined,
      "tag": "div",
      "text": undefined,
    },
  ],
  "dom": undefined,
  "domSize": undefined,
  "events": undefined,
  "instance": undefined,
  "key": undefined,
  "skip": false,
  "state": undefined,
  "tag": "div",
  "text": undefined,
}
`;

exports[`comment should translate description comment 1`] = `
Object {
  "_state": undefined,
  "attrs": Object {
    "className": "hs-item-comment",
  },
  "children": Array [
    Object {
      "_state": undefined,
      "attrs": Object {
        "className": "hs-item-comment-desc",
      },
      "children": Array [
        Object {
          "_state": undefined,
          "attrs": undefined,
          "children": "<p>other tag",
          "dom": undefined,
          "domSize": undefined,
          "events": undefined,
          "instance": undefined,
          "key": undefined,
          "skip": false,
          "state": undefined,
          "tag": "<",
          "text": undefined,
        },
      ],
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "skip": false,
      "state": undefined,
      "tag": "div",
      "text": undefined,
    },
    Object {
      "_state": undefined,
      "attrs": Object {
        "className": "hs-item-comment-return",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "skip": false,
      "state": undefined,
      "tag": "div",
      "text": "",
    },
    Object {
      "_state": undefined,
      "attrs": undefined,
      "children": Array [
        Object {
          "_state": undefined,
          "attrs": undefined,
          "children": "",
          "dom": undefined,
          "domSize": undefined,
          "events": undefined,
          "instance": undefined,
          "key": undefined,
          "skip": false,
          "state": undefined,
          "tag": "#",
          "text": undefined,
        },
        Object {
          "_state": undefined,
          "attrs": undefined,
          "children": "",
          "dom": undefined,
          "domSize": undefined,
          "events": undefined,
          "instance": undefined,
          "key": undefined,
          "skip": false,
          "state": undefined,
          "tag": "#",
          "text": undefined,
        },
        Object {
          "_state": undefined,
          "attrs": Object {
            "className": "hs-item-comment-special",
          },
          "children": Array [
            Object {
              "_state": undefined,
              "attrs": Object {
                "className": "hs-item-comment-tag",
              },
              "children": undefined,
              "dom": undefined,
              "domSize": undefined,
              "events": undefined,
              "instance": undefined,
              "key": undefined,
              "skip": false,
              "state": undefined,
              "tag": "span",
              "text": "special",
            },
            Object {
              "_state": undefined,
              "attrs": Object {
                "className": "hs-item-comment-text",
              },
              "children": undefined,
              "dom": undefined,
              "domSize": undefined,
              "events": undefined,
              "instance": undefined,
              "key": undefined,
              "skip": false,
              "state": undefined,
              "tag": "span",
              "text": 0,
            },
          ],
          "dom": undefined,
          "domSize": undefined,
          "events": undefined,
          "instance": undefined,
          "key": undefined,
          "skip": false,
          "state": undefined,
          "tag": "div",
          "text": undefined,
        },
      ],
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "skip": false,
      "state": undefined,
      "tag": "div",
      "text": undefined,
    },
  ],
  "dom": undefined,
  "domSize": undefined,
  "events": undefined,
  "instance": undefined,
  "key": undefined,
  "skip": false,
  "state": undefined,
  "tag": "div",
  "text": undefined,
}
`;

exports[`commentLong should translate commentLong 1`] = `
Object {
  "_state": undefined,
  "attrs": Object {
    "className": "hs-item-comment",
  },
  "children": Array [
    Object {
      "_state": undefined,
      "attrs": Object {
        "className": "hs-item-comment-desc",
      },
      "children": Array [
        Object {
          "_state": undefined,
          "attrs": undefined,
          "children": "<p>short example comment.</p>
<pre><code>    # complete comment
    with sub paragraphs and code:
    &lt;pre&gt;<code>line 1 {
&lt;span class=\\"hs-code-indent\\"&gt;&lt;/span&gt;indented line
}</code>&lt;/pre&gt;
</code></pre>",
          "dom": undefined,
          "domSize": undefined,
          "events": undefined,
          "instance": undefined,
          "key": undefined,
          "skip": false,
          "state": undefined,
          "tag": "<",
          "text": undefined,
        },
      ],
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "skip": false,
      "state": undefined,
      "tag": "div",
      "text": undefined,
    },
    Object {
      "_state": undefined,
      "attrs": Object {
        "className": "hs-item-comment-return",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "skip": false,
      "state": undefined,
      "tag": "div",
      "text": "",
    },
    Object {
      "_state": undefined,
      "attrs": undefined,
      "children": Array [
        Object {
          "_state": undefined,
          "attrs": undefined,
          "children": "",
          "dom": undefined,
          "domSize": undefined,
          "events": undefined,
          "instance": undefined,
          "key": undefined,
          "skip": false,
          "state": undefined,
          "tag": "#",
          "text": undefined,
        },
        Object {
          "_state": undefined,
          "attrs": undefined,
          "children": "",
          "dom": undefined,
          "domSize": undefined,
          "events": undefined,
          "instance": undefined,
          "key": undefined,
          "skip": false,
          "state": undefined,
          "tag": "#",
          "text": undefined,
        },
        Object {
          "_state": undefined,
          "attrs": undefined,
          "children": "",
          "dom": undefined,
          "domSize": undefined,
          "events": undefined,
          "instance": undefined,
          "key": undefined,
          "skip": false,
          "state": undefined,
          "tag": "#",
          "text": undefined,
        },
      ],
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "skip": false,
      "state": undefined,
      "tag": "div",
      "text": undefined,
    },
  ],
  "dom": undefined,
  "domSize": undefined,
  "events": undefined,
  "instance": undefined,
  "key": undefined,
  "skip": false,
  "state": undefined,
  "tag": "div",
  "text": undefined,
}
`;
